--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "devDependencies": {
     "gts": "^3.1.0",
+    "prettier": "^3.2.5",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.2.6",
     "tslint": "^6.1.3",
