--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,12 @@
     "noImplicitAny": false,
     "target": "es5",
     "module": "esnext",
-    "lib": [ "es2019", "dom" ],
+    "lib": ["es2019", "dom"],
     "allowJs": true,
     "sourceMap": true,
     "declaration": true,
-    "skipLibCheck": true 
+    "skipLibCheck": true
   },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ],
-  "exclude": [
-    "src/umd.ts"
-  ]
+  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "exclude": ["src/umd.ts"]
 }
