--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "main": "esm/index.js",
   "scripts": {
     "watch-esm": "rimraf esm && tsc --watch",
-    "watch-umd": "rimraf umd && webpack --watch --mode development",
-    "build": "rimraf umd && rimraf esm && tsc && webpack --mode production",
     "prepublishOnly": "npm run build",
-    "lint": "gts lint",
-    "clean": "gts clean",
-    "compile": "tsc",
-    "fix": "gts fix"
+    "lint": "prettier --check",
+    "lint-fix": "prettier --write",
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
@@ -34,16 +31,13 @@
     "/src"
   ],
   "devDependencies": {
-    "gts": "^3.1.0",
     "prettier": "^3.2.5",
     "rimraf": "^3.0.2",
+    "string-replace-loader": "^3.1.0",
     "ts-loader": "^9.2.6",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
-  },
-  "dependencies": {
-    "string-replace-loader": "^3.1.0"
   }
 }
