--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepublishOnly": "npm run build",
     "lint": "prettier --check",
     "lint-fix": "prettier --write",
-    "compile": "tsc"
+    "compile": "tsc",
+    "build": "tsc && webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,10 @@
   "homepage": "https://github.com/featbit/featbit-js-client-sdk#readme",
   "files": [
     "/esm",
-    "/umd",
     "/src"
   ],
   "devDependencies": {
+    "gts": "^5.2.0",
     "prettier": "^3.2.5",
     "rimraf": "^3.0.2",
     "string-replace-loader": "^3.1.0",
