--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "typescript": "^5.2.2",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "@plasmohq/storage": "^1.9.3"
   }
 }
